update dependencies to latest version